--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,8 @@
 #Changing the server port
 server.port=8181
  
- 
- #database configration:mysql
- spring.datasource.url=jdbc:mysql://localhost:3306/Supplier
- spring.datasource.username=root
-  spring.datasource.password=7471
-   spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+ spring.profiles.active=${ENV:dev}
    
-   
-   
-   #hibernate configration
-   spring.jpa.hibernate.ddl-auto=update
-   spring.jpa.show-sql=true
-  spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
- 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 ## MULTIPART (MultipartProperties)
